metadata-classic/objects/DisputeExperienceOption__c.object
<CustomObject>
    <description>Stores configuration options for the dispute experience (e.g., withdrawal options, attachment options, and solution options)</description>
    <fields>
        <fullName>AcceptedFileFormats__c</fullName>
        <description>The accepted types of file formats that a user is allowed to upload in the solution center (e.g., .jpg, .pdf, .png)</description>
        <inlineHelpText>The accepted types of file formats that a user is allowed to upload in the solution center (e.g., .jpg, .pdf, .png)</inlineHelpText>
        <label>Accepted File Formats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LinkURL__c</fullName>
        <description>The hyperlink to navigate to when the option is selected.</description>
        <inlineHelpText>The hyperlink to navigate to when the option is selected.</inlineHelpText>
        <label>LinkURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionLabel__c</fullName>
        <description>The solution center label for the option.  Visible to portal users.</description>
        <inlineHelpText>The solution center label for the option.  Visible to portal users.</inlineHelpText>
        <label>Option Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the option.</description>
        <inlineHelpText>The status of the option.  Must be in published status in order to be visible on the solution center.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dispute Experience Option</label>
    <listViews>
        <fullName>AllOptions</fullName>
        <columns>NAME</columns>
        <columns>OptionLabel__c</columns>
        <columns>Status__c</columns>
        <columns>AcceptedFileFormats__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Options</label>
        <sharedTo>
            <group>SolutionCenterAdminUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Experience Options</pluralLabel>
    <recordTypes>
        <fullName>AttachmentOption</fullName>
        <active>true</active>
        <description>Record type used to manage the display attachment options in the solution center.</description>
        <label>Attachment Option</label>
    </recordTypes>
    <recordTypes>
        <fullName>HeaderLink</fullName>
        <active>true</active>
        <description>Record type used to manage the header link option in the solution center.</description>
        <label>Header Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>SolutionOption</fullName>
        <active>true</active>
        <description>Record type used to manage the display solution options in the solution center.</description>
        <label>Solution Option</label>
    </recordTypes>
    <recordTypes>
        <fullName>WithdrawalOption</fullName>
        <active>true</active>
        <description>Record type used to manage the display withdrawal options in the solution center.</description>
        <label>Withdrawal Option</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>